# ELUATE

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md
docs/bench/: README.md  memory-benchmark.md
docs/bench/raw/long/: parity.json
docs/bench/raw/long/eluate/: rss.csv  summary.json  time.txt
docs/bench/raw/long/ref/: rss.csv  summary.json  time.txt
docs/bench/raw/medium/: parity.json
docs/bench/raw/medium/eluate/: rss.csv  summary.json  time.txt
docs/bench/raw/medium/ref/: rss.csv  summary.json  time.txt
docs/bench/raw/short/: parity.json
docs/bench/raw/short/eluate/: rss.csv  summary.json  time.txt
docs/bench/raw/short/ref/: rss.csv  summary.json  time.txt
eluate/: __init__.py  __main__.py  api.py  cli.py
eluate/_vendor/: __init__.py
eluate/_vendor/mss_training/: NOTICE  __init__.py
eluate/_vendor/mss_training/utils/: settings.py
eluate/configs/: __init__.py  bandit_v2.yaml
eluate/core/: __init__.py  compiler.py  extractor.py  pipeline.py  separator.py
eluate/ui/: __init__.py  ascii_art.py  components.py  progress.py  theme.py
eluate/utils/: __init__.py  device.py  download.py  ffmpeg.py  paths.py  preflight.py  telemetry.py  validators.py
notebooks/: eluate_colab_template.ipynb
scripts/: install.sh
tests/: __init__.py  conftest.py  test_api.py  test_cli_setup.py  test_cli_smoke.py  test_core_compiler.py  test_core_extractor.py  test_core_pipeline.py  test_core_separator_io_seam.py  test_core_separator_streaming.py  test_core_separator_windowing.py  test_pipeline_e2e.py  test_utils_device.py  test_utils_paths.py  test_utils_preflight.py  test_utils_validators.py
